# stroid-lazer

./: .gitignore  Cargo.toml  README.md  auto_refresh.sh
assets/: asteroids.assets.ron  settings.levels.ron  settings.player.ron  settings.projectile.ron  stroid.ammonition-depot.ron  stroid.ammonition-settings.ron  stroid.asteroid-pool-collection.ron  stroid.asteroid-pool-settings.ron  stroid.game-settings.ron  stroid.input-key-settings.ron  stroid.level-settings.ron  stroid.misc-assets.ron  stroid.sprite-assets.ron  stroid.weapon-collection.ron  stroid.weapon-settings.ron
docs/: game-state.mmd  play-state.mmd
src/: args.rs  asteroid.rs  background.rs  cmd_line.rs  constants.rs  controls.rs  levels.rs  main.rs  movement.rs  player.rs  prelude.rs  projectile.rs  settings.rs  states.rs  utils.rs
src/assets/: ammonition_depot.rs  ammonition_settings.rs  ammonition_spritesheets.rs  ammonition_texture_collection.rs  asteroid_pool_collection.rs  asteroid_pool_settings.rs  asteroid_selection.rs  asteroid_split_selection.rs  asteroid_spritesheets.rs  asteroid_texture_collection.rs  default_level_settings.rs  game_area_settings.rs  game_assets.rs  game_level_settings.rs  game_settings.rs  game_start_settings.rs  highscores.rs  input_key_settings.rs  level_startup_settings.rs  mod.rs  optional.rs  player_settings.rs  plugin.rs  sprite_dynamic_asset_collection.rs  sprite_sheet_asset.rs  state_backgrounds.rs  weapon_collection.rs  weapon_settings.rs
src/asteroid/: components.rs  dbg_colliders.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/movement/: components.rs  mod.rs  plugin.rs  systems.rs
src/player/: components.rs  dbg_colliders.rs  events.rs  flames.rs  input.rs  mod.rs  plugin.rs  systems.rs
src/projectile/: components.rs  dbg_colliders.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/tween_events/: events.rs  mod.rs  plugin.rs  systems.rs
src/ui/: common.rs  constants.rs  countdown_ui.rs  dbg_colliders.rs  game_over_menu.rs  game_over_menu_death.rs  game_over_menu_won.rs  game_ui.rs  highscore_ui.rs  interaction.rs  main_menu.rs  menu.rs  mod.rs  paused_menu.rs  plugin.rs
