[package]
name = "stroid-lazer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
smart-default = "0.7.1"
derive_more = "0.99.17"
serde = { version = "1.0.198" }
anyhow = "1.0.82"
ron = "0.8"
tracing = "0.1.40"

bevy = { version = "0.13.2"}
bevy_asset_loader = { version="0.20.1", features=["2d", "standard_dynamic_assets"]}
bevy_common_assets = { version = "0.10", features = ["ron"] }

bevy_editor_pls = {version="0.8.1", optional = true}
iyes_perf_ui = {version ="0.2.3", optional = true}

[dev-dependencies]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
editor = ["bevy_editor_pls"]
perf = ["iyes_perf_ui"]