[package]
name = "stroid-lazer"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
derive_more = { version = "1.0.0", features = ["full"] }
smart-default = "0.7.1"
enum-ordinalize = "4.3.0"
serde = { version = "1.0.205" }
ron = "0.8.1"
tracing = "0.1.40"
anyhow = "1.0.86"

bevy = { version = "0.14.1", features = ["bevy_dev_tools", "jpeg"] }
bevy_asset_loader = { version = "0.21.0", features = [
    "2d",
    "standard_dynamic_assets",
] }
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
avian2d = { version = "0.1.1", features = ["serialize"] }
bevy_turborand = "0.9.0"
leafwing-input-manager = "0.15.0"
bevy_tweening = "0.11.0"

bevy-inspector-egui = { version = "0.25.1", optional = true }
bevy_editor_pls = { version = "0.8.1", optional = true }
iyes_perf_ui = { version = "0.3.0", optional = true }
clap = { version = "4.5.14", features = ["derive"], optional = true }

[dev-dependencies]
rstest = "0.22.0"

[lints.clippy]
type_complexity = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = [ "cmd_line" ]

cmd_line = ["clap"]
dbg_colliders = [] # show colliders
inspector = ["bevy-inspector-egui"] # inspect components etc.
editor = ["bevy_editor_pls"] # currently not working!
perf = ["iyes_perf_ui"] # show fps etc.
